---
source: cubesql/src/compile/test/test_introspection.rs
expression: "execute_query(r#\"\n            SELECT *\n            FROM pg_foreign_data_wrapper\n            ORDER BY oid\n            \"#.to_string(),\nDatabaseProtocol::PostgreSQL).await?"
---
+-----+---------+----------+------------+--------------+--------+------------+------+
| oid | fdwname | fdwowner | fdwhandler | fdwvalidator | fdwacl | fdwoptions | xmin |
+-----+---------+----------+------------+--------------+--------+------------+------+
+-----+---------+----------+------------+--------------+--------+------------+------+
